--- a/components/Header1/SearchInput.module.css
+++ b/components/Header1/SearchInput.module.css
@@ -12,7 +12,10 @@
   padding: 10px;
   border: none;
   outline: none;
-  font-size: 16px;
+  font-family: var(--font-inter);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 18px;
   background-color: var(--gray);
 }
 
@@ -25,7 +28,6 @@
   height: 40px;
   border: none;
   border-radius: 50%;
-  font-size: 18px;
   color: var(--white);
   background-color: var(--yellow);
   transition: background-color 0.3s ease-in-out;
