feat: the second section in the drop-down menu

--- a/components/UI/YellowButton/YellowButton.module.scss
+++ b/components/UI/YellowButton/YellowButton.module.scss
@@ -72,6 +72,8 @@
     &--lg {
       padding: 8px 30px;
       font-size: 12px;
+      font-weight: 400;
+      letter-spacing: 1px;
       height: 43px;
     }
   }
