--- a/components/Header1/Header1.module.css
+++ b/components/Header1/Header1.module.css
@@ -350,9 +350,7 @@
   top: 100px; /* Располагаем меню ниже хедера */
   left: 0;
   right: 0;
-  height: calc(
-    100vh - 200px
-  ); /* Меню будет занимать всю оставшуюся высоту экрана */
+  height: auto;
   background-color: rgb(0, 255, 195); /* Белый фон для меню */
   display: flex;
   flex-direction: column;
@@ -447,6 +445,7 @@
   align-items: center;
   text-decoration: none;
   color: var(--blue);
+  padding-bottom: 25px;
   font-size: 10px;
   font-weight: 400;
   line-height: 15px;
@@ -484,8 +483,35 @@
 
 
 .MobileMenuSite {
-  background-color: chartreuse;
+  background-color: cadetblue;
+  border-top: 1px dashed var(--gray) ;
 }
+
+.MobileMenuTitle{
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 30px;
+  color: var(--blue);
+  padding: 25px 0;
+}
+
+.MobileMenuSiteList {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+  justify-content: center;
+  gap:20px;
+}
+
+.MobileMenuButton{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  margin: 22px 0 8px;
+  background-color: #f00;
+}
+
 @media (max-width: 1280px) {
   .DesktopContainer {
     display: none;
