--- a/components/Header1/Header1.module.css
+++ b/components/Header1/Header1.module.css
@@ -1,10 +1,10 @@
 .header {
   width: 100%;
   font-family: var(--font-inter);
-  background-color: var(--blue);
+  background-color: var(--white);
 }
+
 .DesktopContainer {
-  background-color: #f00;
   max-width: 1366px;
   margin: 0 auto;
   height: auto;
@@ -12,13 +12,14 @@
   flex-direction: column;
   align-items: center;
 }
+
 .menu {
   display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
   height: 61px;
-  background-color: rgb(136, 0, 255);
+  background-color: var(--white);
   border-bottom: 2px solid var(--gray);
 }
 
@@ -42,8 +43,6 @@
   align-items: center;
   gap: 40px;
   font-size: 14px;
-  color: #555;
-  background-color: #fbb03b;
 }
 
 .icon {
@@ -70,7 +69,6 @@
   justify-content: center;
   align-items: center;
   gap: 60px;
-  background-color: rgb(0, 255, 140);
 }
 
 .menuItem {
@@ -106,7 +104,6 @@
   width: 100%;
   height: 108px;
   padding: 24px 0;
-  background-color: chartreuse;
 }
 
 .logo {
@@ -135,7 +132,6 @@
   align-items: center;
   gap: 14px;
   margin-right: 50px;
-  background-color: cornflowerblue;
   width: auto;
 }
 
@@ -143,7 +139,6 @@
   display: flex;
   flex-direction: column;
   text-align: end;
-  background-color: #ffdada;
 }
 
 .phoneNumber {
@@ -171,12 +166,10 @@
   position: relative;
   display: flex;
   align-items: center;
-  background-color: #f00;
 }
 
 .ellipseGray {
   position: absolute;
-  background-color: #f0f0f0;
   width: 80px;
   height: 80px;
   border-radius: 50%;
@@ -204,7 +197,6 @@
   flex-direction: row;
   align-items: center;
   gap: 24px;
-  background-color: cornflowerblue;
 }
 
 .iconWrapper {
@@ -271,29 +263,29 @@
   align-items: center;
   padding: 0 15px;
   width: 100%;
-  height: 61px; /* Высота хедера */
-  background-color: rgb(136, 0, 255);
-  border-bottom: 2px solid var(--gray);
+  height: 61px;
+  background-color: var(--white);
+  border-bottom: 1px solid var(--gray);
   z-index: 2;
 }
 
 .burgerButton {
-  width: 32px; /* Размер кнопки */
-  height: 32px; /* Размер кнопки */
-  background-color: var(--yellow); /* Желтый фон */
-  border-radius: 50%; /* Круглая форма */
+  width: 32px;
+  height: 32px;
+  background-color: var(--yellow);
+  border-radius: 50%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  z-index: 2; /* Чтобы кнопка была выше остальных элементов */
+  z-index: 2;
 }
 
 .burgerLine {
   width: 8px;
   height: 1px;
-  background-color: rgb(255, 255, 255); /* Черные полоски для бургер-кнопки */
+  background-color: var(--white);
   margin: 1px 0;
   transition: all 0.3s ease;
 }
@@ -308,7 +300,7 @@
   transform: scale(1.03);
 }
 
-.logo img {
+.MobileLogo img {
   width: 97px;
   height: 41px;
 }
@@ -319,46 +311,49 @@
   align-items: center;
   width: 100%;
   height: 40px;
-  background-color: chartreuse;
+  background-color: var(--white);
+  border-bottom: 1px solid var(--gray);
 }
 
 .menuButton {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 16px;
-  color: var(--blue);
-  text-decoration: none;
   padding: 10px;
+  font-size: 12px;
+  font-weight: 600;
+  line-height: 14px;
+  width: 48%;
+  text-decoration: none;
+  color: var(--blue);
 }
 
 .Mobicon {
-  width: 24px;
-  height: 24px;
-  margin-right: 8px;
+  width: 15px;
+  height: 15px;
+  margin-right: 6px;
 }
 
 .separator {
-  border-left: 2px dashed var(--blue);
-  opacity: 0.3;
   height: 30px;
+  border-left: 1px dashed var(--blue);
+  opacity: 0.2;
 }
 
-/* Меню, которое будет вылазить из-под хедера */
 .slideMenu {
   position: absolute;
-  top: 100px; /* Располагаем меню ниже хедера */
+  top: 100px;
   left: 0;
   right: 0;
   height: auto;
-  background-color: rgb(0, 255, 195); /* Белый фон для меню */
+  background-color: var(--white);
   display: flex;
   flex-direction: column;
-  justify-content: start; /* Равномерное распределение элементов меню */
+  justify-content: start;
   padding: 20px;
-  transform: translateY(-100%); /* Меню скрыто по умолчанию */
-  transition: transform 0.3s ease; /* Плавная анимация */
-  z-index: -1; /* Чтобы меню было ниже кнопки */
+  transform: translateY(-100%);
+  transition: transform 0.3s ease;
+  z-index: -1;
 }
 
 .backdrop {
@@ -367,9 +362,9 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.5); /* Полупрозрачный черный */
-  z-index: -4; /* Чтобы фон был выше содержимого, но ниже меню */
-  animation: fadeIn 0.3s ease; /* Плавное появление */
+  background-color: rgba(0, 0, 0, 0.7);
+  z-index: -4;
+  animation: fadeIn 0.3s ease;
 }
 
 @keyframes fadeIn {
@@ -381,22 +376,57 @@
   }
 }
 
-/* При открытии меню */
 .slideMenu.open {
-  transform: translateY(0); /* Меню появляется */
+  transform: translateY(0);
 }
 
-/* Анимация для бургер-меню */
 .burgerButton.open .burgerLine:nth-child(1) {
-  transform: translateY(3px) translateX(0px) rotate(45deg); /* Верхняя линия поворачивается */
+  transform: translateY(3px) translateX(0px) rotate(45deg);
 }
 
 .burgerButton.open .burgerLine:nth-child(2) {
-  opacity: 0; /* Средняя линия исчезает */
+  opacity: 0;
 }
 
 .burgerButton.open .burgerLine:nth-child(3) {
-  transform: translateY(-3px) translateX(0px) rotate(-45deg); /* Нижняя линия поворачивается */
+  transform: translateY(-3px) translateX(0px) rotate(-45deg);
+}
+
+.mobileCartContainer {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 24px;
+}
+
+.mobileIconWrapper {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.mobileIconWrapper img {
+  width: 25px;
+  height: 25px;
+}
+
+.mobileItemCount {
+  background-color: var(--yellow);
+  border: 2px solid var(--white);
+  color: var(--white);
+  font-size: 10px;
+  font-weight: 700;
+  line-height: 12px;
+  min-width: 17px;
+  min-height: 17px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: -36px;
+  margin-top: -16px;
+  z-index: 1;
 }
 
 .mobileMenuBlock {
@@ -405,14 +435,13 @@
   font-size: 20px;
   align-items: center;
   justify-content: center;
-  background-color: #fbb03b;
 }
+
 .MobileBlock {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   gap: 15px;
-  background-color: rgb(230, 105, 255);
 }
 
 .salesDepartment {
@@ -422,6 +451,7 @@
   justify-content: center;
   gap: 10px;
 }
+
 .phone {
   display: flex;
   flex-direction: column;
@@ -433,6 +463,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .subText2 {
   font-size: 12px;
   font-weight: 300;
@@ -459,13 +490,13 @@
   justify-content: center;
   width: 30px;
   height: 30px;
-  background-color: #ffc859;
+  background-color: var(--yellow);
   border-radius: 50%;
 }
 
 .iconWrapperr img {
-  width: 8px !important; /* Ограничиваем ширину */
-  height: 8px !important; /* Ограничиваем высоту */
+  width: 8px !important;
+  height: 8px !important;
   object-fit: contain;
 }
 
@@ -473,21 +504,15 @@
   text-decoration: underline;
 }
 
-.callButton:hover .text {
-  color: #555; /* Темнее текст при наведении */
-}
-
 .callButton:hover .iconWrapperr {
-  background-color: #ffb834; /* Затемнение фона иконки при наведении */
+  background-color: var(--yellow-hover);
 }
-
 
 .MobileMenuSite {
-  background-color: cadetblue;
-  border-top: 1px dashed var(--gray) ;
+  border-top: 1px dashed var(--gray);
 }
 
-.MobileMenuTitle{
+.MobileMenuTitle {
   font-size: 20px;
   font-weight: 600;
   line-height: 30px;
@@ -500,16 +525,15 @@
   flex-direction: column;
   align-items: start;
   justify-content: center;
-  gap:20px;
+  gap: 20px;
 }
 
-.MobileMenuButton{
+.MobileMenuButton {
   display: flex;
   align-items: center;
   justify-content: center;
   width: 100%;
   margin: 22px 0 8px;
-  background-color: #f00;
 }
 
 @media (max-width: 1280px) {
@@ -521,6 +545,5 @@
     display: block;
     width: 100%;
     font-family: var(--font-inter);
-    background-color: var(--blue);
   }
 }
