--- a/components/ProductList/ProductCardDetails/ProductsList.module.css
+++ b/components/ProductList/ProductCardDetails/ProductsList.module.css
@@ -55,6 +55,12 @@
   border-radius: 6px;
 }
 
+@media (max-width: 1280px) {
+  .container {
+    padding-top: 100px;
+  }
+}
+
 @media (max-width: 480px) {
   .container {
     width: 90%;
