--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   font-family: var(--font-inter);
   background-color: var(--white);
+  border-bottom: 2px solid var(--gray);
 }
 
 .DesktopContainer {
@@ -20,7 +21,6 @@
   width: 100%;
   height: 61px;
   background-color: var(--white);
-  border-bottom: 2px solid var(--gray);
 }
 
 .address,
@@ -95,6 +95,12 @@
 
 .menuItem:hover::after {
   transform: scaleX(1);
+}
+
+.headerLine {
+  width: 100vw;
+  height: 2px;
+  background-color: var(--gray);
 }
 
 .hat {
