--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -1,7 +1,7 @@
 .bannerContainer {
   position: relative;
   width: 100%;
-  height: 796px;
+  height: auto;
   margin: 0 0 80px;
   overflow: hidden;
   display: flex;
