--- a/pages/404.module.css
+++ b/pages/404.module.css
@@ -5,34 +5,19 @@
   overflow: hidden;
 }
 
-.gif {
+.video {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: 1;
+  z-index: -1;
+  transition: transform 0.3s ease;
 }
 
-.marqueeWrapper {
-  position: absolute;
-  top: 50%;
-  width: 100vw;
-  overflow: hidden;
-  z-index: 2;
-}
-
-.marquee {
-  display: flex;
-  white-space: nowrap;
-}
-
-.marqueeText {
-  font-size: 40px;
-  font-weight: 900;
-  color: white;
-  text-shadow: 0 0 10px rgba(0, 0, 0, 0.7);
-  display: inline-block;
-  font-variant-numeric: lining-nums;
+@media (max-width: 1024px) {
+  .video {
+    transform: translateX(6%) scale(1.15);
+  }
 }
