--- a/components/UI/YellowButton/YellowButton.module.scss
+++ b/components/UI/YellowButton/YellowButton.module.scss
@@ -6,8 +6,8 @@
   border: none;
   border-radius: 100px;
   font-family: var(--font-inter);
-  background-color: var(--yellow);
-  color: white;
+  background-color: var(--yellow_lightPurple-button);
+  color: var(--white-only);
   cursor: pointer;
   transition: background-color 0.3s ease;
   text-decoration: none;
