--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -33,7 +33,7 @@
   height: 100%;
   padding: 88px 10px;
   text-align: left;
-  color: var(--white);
+  color: var(--white-only);
 }
 
 .mainTitle {
@@ -68,7 +68,7 @@
   font-size: 14px;
   font-weight: 400;
   line-height: 21px;
-  color: var(--white);
+  color: var(--white-only);
 }
 
 .icon {
@@ -78,7 +78,7 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
-  background-color: var(--yellow);
+  background-color: var(--yellow_lightPurple-button);
   border-radius: 50%;
 }
 
