--- a/components/Product/ProductList/ProductsList.module.css
+++ b/components/Product/ProductList/ProductsList.module.css
@@ -16,12 +16,12 @@
 .title {
   font-size: 36px;
   font-weight: 500;
-  color: var(--black);
+  color: var(--black_gray);
   margin-bottom: 48px;
 }
 
 .highlight {
-  color: var(--yellow);
+  color: var(--yellow_white);
   font-weight: 800;
 }
 
@@ -49,7 +49,7 @@
 }
 
 .container :global(.swiper-pagination-bullet-active) {
-  background-color: var(--yellow);
+  background-color: var(--yellow_lightPurple-button);
   width: 26px;
   height: 7px;
   border-radius: 6px;
