--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -78,6 +78,7 @@
   align-items: center;
   justify-content: center;
   font-size: 20px;
+  color: var(--white-only);
   background-color: var(--yellow_lightPurple-button);
   border-radius: 50%;
 }
@@ -174,7 +175,7 @@
     font-size: 10px;
     min-width: 18px;
     min-height: 18px;
-    color: var(--white);
+    color: var(--white-only);
   }
 
   .feature {
