--- a/components/Footer/EmailInput.module.css
+++ b/components/Footer/EmailInput.module.css
@@ -3,8 +3,8 @@
   align-items: center;
   padding: 10px;
   max-width: 300px;
-  border-radius: 25px;
-  background-color: var(--white);
+  border-radius: 45px;
+  background-color: var(--white_lightGray-footerText);
 }
 
 .input {
@@ -12,8 +12,9 @@
   padding: 10px;
   border: none;
   outline: none;
-  font-size: 16px;
-  color: #7d7d7d;
+  font-size: 12px;
+  font-weight: 400;
+  background-color: var(--white_lightGray-footerText);
 }
 
 .button {
@@ -26,8 +27,8 @@
   border: none;
   border-radius: 50%;
   font-size: 18px;
-  color: var(--white);
-  background-color: var(--yellow);
+  color: var(--white-only);
+  background-color: var(--yellow_lightPurple-button);
 }
 
 @media (max-width: 480px) {
