--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   font-family: var(--font-inter);
-  background-color: var(--white);
+  background-color: var(--white-header);
   border-bottom: 2px solid var(--gray);
 }
 
@@ -20,7 +20,7 @@
   align-items: center;
   width: 100%;
   height: 61px;
-  background-color: var(--white);
+  background-color: var(--white-header);
 }
 
 .address,
@@ -54,7 +54,7 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 600;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .subText {
@@ -151,7 +151,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 21px;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .workingHours {
@@ -190,7 +190,7 @@
   height: 10px;
   background-color: var(--green);
   border-radius: 50%;
-  border: 2px solid var(--white);
+  border: 2px solid var(--white-header);
   z-index: 1;
 }
 
@@ -218,9 +218,9 @@
 }
 
 .itemCount {
-  background-color: var(--yellow);
-  border: 2px solid var(--white);
-  color: var(--white);
+  background-color: var(--yellow_lightPurple-button);
+  border: 2px solid var(--white-header);
+  color: var(--white-only);
   font-size: 14px;
   font-weight: 700;
   line-height: 17px;
@@ -251,7 +251,7 @@
   font-size: 14px;
   font-weight: 600;
   line-height: 21px;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .MobileContainer {
@@ -259,7 +259,7 @@
   position: fixed;
   width: 100%;
   font-family: var(--font-inter);
-  background-color: var(--blue);
+  background-color: var(--white-header);
   z-index: 3;
 }
 
@@ -270,7 +270,7 @@
   padding: 0 15px;
   width: 100%;
   height: 61px;
-  background-color: var(--white);
+  background-color: var(--white-header);
   border-bottom: 1px solid var(--gray);
   z-index: 2;
 }
@@ -278,7 +278,7 @@
 .burgerButton {
   width: 32px;
   height: 32px;
-  background-color: var(--yellow);
+  background-color: var(--yellow_lightPurple-button);
   border-radius: 50%;
   display: flex;
   flex-direction: column;
@@ -291,7 +291,7 @@
 .burgerLine {
   width: 8px;
   height: 1px;
-  background-color: var(--white);
+  background-color: var(--white-only);
   margin: 1px 0;
   transition: all 0.3s ease;
 }
@@ -317,7 +317,7 @@
   align-items: center;
   width: 100%;
   height: 40px;
-  background-color: var(--white);
+  background-color: var(--white-header);
   border-bottom: 1px solid var(--gray);
 }
 
@@ -352,7 +352,7 @@
   left: 0;
   right: 0;
   height: auto;
-  background-color: var(--white);
+  background-color: var(--white-header);
   display: flex;
   flex-direction: column;
   justify-content: start;
@@ -418,9 +418,9 @@
 }
 
 .mobileItemCount {
-  background-color: var(--yellow);
-  border: 2px solid var(--white);
-  color: var(--white);
+  background-color: var(--yellow_lightPurple-button);
+  border: 2px solid var(--white-header);
+  color: var(--white-only);
   font-size: 10px;
   font-weight: 700;
   line-height: 12px;
@@ -496,7 +496,7 @@
   justify-content: center;
   width: 30px;
   height: 30px;
-  background-color: var(--yellow);
+  background-color: var(--yellow_lightPurple-button);
   border-radius: 50%;
 }
 
