--- a/components/LogoSwiper/LogoSwiper.module.css
+++ b/components/LogoSwiper/LogoSwiper.module.css
@@ -9,12 +9,12 @@
 .title {
   font-size: 36px;
   font-weight: 500;
-  color: var(--black);
+  color: var(--black_gray);
   margin-bottom: 16px;
 }
 
 .highlight {
-  color: var(--yellow);
+  color: var(--yellow_white);
   font-weight: 800;
 }
 
@@ -44,7 +44,7 @@
   padding: 10px;
   box-sizing: border-box;
   overflow: hidden;
-  background-color: var(--white);
+  background-color: var(--bg);
   border-radius: 8px;
 }
 
@@ -60,7 +60,7 @@
 }
 
 .swiper-pagination-bullet {
-  background-color: var(--yellow);
+  background-color: var(--yellow_lightPurple-button);
 }
 
 .container :global(.swiper-pagination) {
@@ -79,7 +79,7 @@
 }
 
 .container :global(.swiper-pagination-bullet-active) {
-  background-color: var(--yellow);
+  background-color: var(--yellow_lightPurple-button);
   width: 26px;
   height: 7px;
   border-radius: 6px;
