--- a/components/Product/ProductCardDetails/ProductDetails.module.css
+++ b/components/Product/ProductCardDetails/ProductDetails.module.css
@@ -47,7 +47,7 @@
   font-size: 30px;
   font-weight: 500;
   line-height: 45px;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .productBrand {
@@ -97,7 +97,7 @@
   font-size: 30px;
   font-weight: 800;
   line-height: 39px;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .quantityContainer {
@@ -117,13 +117,14 @@
   border-radius: 40px;
   border: 0px;
   font-size: 12px;
-  background-color: rgba(255, 198, 80, 0.3);
+  background-color: var(--quantityBtn);
+  color: var(--black_gray);
   cursor: pointer;
   transition: background-color 0.2s ease-in-out;
 }
 
 .quantityButton:hover {
-  background-color: rgba(255, 198, 80, 1);
+  background-color: var(--yellow-hover);
 }
 
 .quantity {
@@ -189,7 +190,7 @@
   font-size: 14px;
   font-weight: 500;
   line-height: 24px;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .description {
@@ -204,7 +205,7 @@
   font-size: 16px;
   font-weight: 500;
   line-height: 24px;
-  color: var(--black);
+  color: var(--black_gray);
   cursor: pointer;
   transition: color 0.2s ease-in-out;
   width: 120px;
@@ -238,13 +239,13 @@
 .webWeaversGame {
   width: 100%;
   height: 200px;
-  background-color: azure;
+  background-color: var(--gray);
 }
 
 .webWeavers {
   position: relative;
   font-size: 16px;
-  color: var(--black);
+  color: var(--black_gray);
   cursor: pointer;
   width: 132px;
   transition:
