--- a/components/Сategories/Categories.module.css
+++ b/components/Сategories/Categories.module.css
@@ -11,11 +11,11 @@
 .title {
   font-size: 36px;
   font-weight: 500;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .highlight {
-  color: var(--yellow);
+  color: var(--yellow_white);
   font-weight: 800;
 }
 
@@ -46,7 +46,7 @@
   height: 250px;
   border-radius: 20px;
   overflow: hidden;
-  background-color: rgba(188, 165, 120, 0.1);
+  background-color: var(--background-categories);
   transition: background-color 0.3s ease-in-out;
 }
 
@@ -58,7 +58,7 @@
   margin-top: 20px;
   font-size: 16px;
   font-weight: 500;
-  color: var(--black);
+  color: var(--black_gray);
 }
 
 .imageWrapper:hover {
