--- a/components/Banner/Banner.module.css
+++ b/components/Banner/Banner.module.css
@@ -72,15 +72,24 @@
 }
 
 .icon {
-  min-width: 39px;
-  min-height: 39px;
+  min-width: 40px;
+  min-height: 40px;
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 20px;
-  color: var(--white-only);
   background-color: var(--yellow_lightPurple-button);
   border-radius: 50%;
+  position: relative;
+}
+
+.icon::before {
+  content: '+';
+  font-size: 20px;
+  color: var(--white-only);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 @media (max-width: 1280px) {
@@ -172,10 +181,13 @@
   }
 
   .icon {
-    font-size: 10px;
     min-width: 18px;
     min-height: 18px;
     color: var(--white-only);
+  }
+
+  .icon::before {
+    font-size: 10px;
   }
 
   .feature {
@@ -200,10 +212,6 @@
 
   .catalogButton {
     display: none;
-  }
-
-  .icon {
-    font-size: 10px;
   }
 
   .feature {
