--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -94,19 +94,19 @@
   text-decoration: underline;
 }
 
-.categories_column,
-.download_column,
+.categoriesColumn,
+.downloadColumn,
 .contacts,
 .contactsContainer {
   display: flex;
   flex-direction: column;
 }
 
-.categories_column {
+.categoriesColumn {
   gap: 25px;
 }
 
-.download_column .messengers {
+.downloadColumn .messengers {
   display: flex;
   gap: 10px;
   margin-top: 15px;
@@ -162,7 +162,6 @@
   font-weight: 400;
   font-size: 10px;
   line-height: 15px;
-  text-decoration-style: solid;
   text-decoration: underline;
   padding-top: 8px;
 }
@@ -186,7 +185,7 @@
 }
 
 @media (max-width: 768px) {
-  .download_column {
+  .downloadColumn {
     order: 1;
   }
 
@@ -224,7 +223,6 @@
     line-height: 15px;
     padding-top: 8px;
     text-decoration: underline;
-    text-decoration-style: solid;
   }
 
   .contactsContainer {
@@ -328,7 +326,7 @@
 }
 
 @media (max-width: 1280px) {
-  .download_column {
+  .downloadColumn {
     order: 1;
   }
 
