--- a/components/Header/Header.module.css
+++ b/components/Header/Header.module.css
@@ -1,8 +1,20 @@
 .header {
+  position: relative;
   width: 100%;
   font-family: var(--font-inter);
   background-color: var(--white-header);
   border-bottom: 2px solid var(--gray);
+}
+
+.header::after {
+  content: '';
+  position: absolute;
+  bottom: 62%;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--gray);
+  z-index: 1;
 }
 
 .DesktopContainer {
@@ -54,6 +66,7 @@
   font-size: 14px;
   line-height: 18px;
   font-weight: 600;
+  text-decoration: none;
   color: var(--black_gray);
 }
 
