chore: fulfillment of requirements from the review pt3
-порядок импортов
-значения кратны 4
-убраны инлайновые стили

--- a/components/Product/ProductCardDetails/ProductDetails.module.css
+++ b/components/Product/ProductCardDetails/ProductDetails.module.css
@@ -178,6 +178,11 @@
   opacity: 0.8;
 }
 
+.downloadLink {
+  text-decoration: none;
+  color: inherit;
+}
+
 .characteristicsList {
   font-size: 14px;
   font-weight: 300;
