--- a/components/Map/Map.module.css
+++ b/components/Map/Map.module.css
@@ -70,7 +70,7 @@
   font-size: 14px;
   line-height: 1;
   margin-bottom: 8px;
-  color: var(--black_gray);
+  color: var(--black-gray);
 }
 
 .iconText p {
