--- a/components/Product/Description/Description.module.css
+++ b/components/Product/Description/Description.module.css
@@ -4,14 +4,15 @@
 .descriptionTitle {
     font-size: 1.5rem;
     cursor: pointer;
-    display: flex;
+    display: inline-flex;
     align-items: center;
-    justify-content: space-between;
+    gap: 8px;
+    margin-bottom: 10px;
 }
 .descriptionContainer {
     overflow: hidden;
     transition: max-height 0.6s ease-in-out, opacity 0.6s ease-in-out;
-    padding: 0 10px;
+
 }
 .descriptionText {
     font-size: 1rem;
